turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:6: error: not found: value i1
    var i2=i1
           ^